Faltan IDS Finales

--- a/otrs/callSofia.html
+++ b/otrs/callSofia.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Crear tikete PQRS</h1>
-        <form action="crearTicket.php" method="post">
+        <form action="ticketSofia.php" method="post">
             Nombre: <input type="text" name="username_id"><br>
             Tipo de problema: <input type="text" name="issue_type"><br>
             Tema: <input type="text" name="subject"><br>
